// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BlogPosts > renders with as correctly 1`] = `
"<section data-orientation="horizontal" class="flex flex-col gap-8 lg:gap-y-16 sm:grid sm:grid-cols-2 lg:grid-cols-3">
  <article data-orientation="vertical" data-slot="root" class="relative group/blog-post rounded-lg overflow-hidden flex flex-col bg-default ring ring-default">
    <div data-slot="header" class="relative overflow-hidden aspect-[16/9] w-full pointer-events-none"><img alt="Image alt" src="https://picsum.photos/640/360" data-slot="image" class="object-cover object-top w-full h-full"></div>
    <div data-slot="body" class="min-w-0 flex-1 flex flex-col p-4 sm:p-6">
      <!--v-if-->
      <div data-slot="meta" class="flex items-center gap-2 mb-2"><span data-slot="badge" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md ring ring-inset ring-accented text-default bg-elevated"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
        <!--v-if--></span><time datetime="2024-12-13T09:32:32.598Z" data-slot="date" class="text-sm text-toned">Dec 13, 2024</time>
      </div>
      <h2 data-slot="title" class="text-xl text-pretty font-semibold text-highlighted">Title</h2>
      <div data-slot="description" class="mt-1 text-base text-pretty text-muted">Description</div>
      <div data-slot="authors" class="pt-4 mt-auto flex flex-wrap gap-x-3 gap-y-1.5">
        <div data-orientation="horizontal" data-slot="root" class="relative group/user flex items-center gap-2"><span data-slot="root" class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><img src="https://i.pravatar.cc/120?img=1" alt="Author" width="32" height="32" data-slot="image" class="h-full w-full rounded-[inherit] object-cover"></span>
          <div data-slot="wrapper" class="">
            <!--v-if-->
            <p data-slot="name" class="font-medium text-highlighted text-sm">Author</p>
            <!--v-if-->
          </div>
        </div>
      </div>
    </div>
    <!--v-if-->
  </article>
</section>"
`;

exports[`BlogPosts > renders with class correctly 1`] = `
"<div data-orientation="horizontal" class="flex flex-col gap-8 lg:gap-y-16 sm:grid sm:grid-cols-2 lg:grid-cols-3 gap-y-12">
  <article data-orientation="vertical" data-slot="root" class="relative group/blog-post rounded-lg overflow-hidden flex flex-col bg-default ring ring-default">
    <div data-slot="header" class="relative overflow-hidden aspect-[16/9] w-full pointer-events-none"><img alt="Image alt" src="https://picsum.photos/640/360" data-slot="image" class="object-cover object-top w-full h-full"></div>
    <div data-slot="body" class="min-w-0 flex-1 flex flex-col p-4 sm:p-6">
      <!--v-if-->
      <div data-slot="meta" class="flex items-center gap-2 mb-2"><span data-slot="badge" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md ring ring-inset ring-accented text-default bg-elevated"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
        <!--v-if--></span><time datetime="2024-12-13T09:32:32.598Z" data-slot="date" class="text-sm text-toned">Dec 13, 2024</time>
      </div>
      <h2 data-slot="title" class="text-xl text-pretty font-semibold text-highlighted">Title</h2>
      <div data-slot="description" class="mt-1 text-base text-pretty text-muted">Description</div>
      <div data-slot="authors" class="pt-4 mt-auto flex flex-wrap gap-x-3 gap-y-1.5">
        <div data-orientation="horizontal" data-slot="root" class="relative group/user flex items-center gap-2"><span data-slot="root" class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><img src="https://i.pravatar.cc/120?img=1" alt="Author" width="32" height="32" data-slot="image" class="h-full w-full rounded-[inherit] object-cover"></span>
          <div data-slot="wrapper" class="">
            <!--v-if-->
            <p data-slot="name" class="font-medium text-highlighted text-sm">Author</p>
            <!--v-if-->
          </div>
        </div>
      </div>
    </div>
    <!--v-if-->
  </article>
</div>"
`;

exports[`BlogPosts > renders with default slot correctly 1`] = `"<div data-orientation="horizontal" class="flex flex-col gap-8 lg:gap-y-16 sm:grid sm:grid-cols-2 lg:grid-cols-3">Default slot</div>"`;

exports[`BlogPosts > renders with orientation vertical correctly 1`] = `
"<div data-orientation="vertical" class="flex flex-col gap-8 lg:gap-y-16">
  <article data-orientation="horizontal" data-slot="root" class="relative group/blog-post flex flex-col rounded-lg overflow-hidden lg:grid lg:grid-cols-2 lg:items-center gap-x-8 bg-default ring ring-default">
    <div data-slot="header" class="relative overflow-hidden aspect-[16/9] w-full pointer-events-none"><img alt="Image alt" src="https://picsum.photos/640/360" data-slot="image" class="object-cover object-top w-full h-full"></div>
    <div data-slot="body" class="min-w-0 flex-1 flex flex-col justify-center p-4 sm:p-6 lg:px-0">
      <!--v-if-->
      <div data-slot="meta" class="flex items-center gap-2 mb-2"><span data-slot="badge" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md ring ring-inset ring-accented text-default bg-elevated"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
        <!--v-if--></span><time datetime="2024-12-13T09:32:32.598Z" data-slot="date" class="text-sm text-toned">Dec 13, 2024</time>
      </div>
      <h2 data-slot="title" class="text-xl text-pretty font-semibold text-highlighted">Title</h2>
      <div data-slot="description" class="mt-1 text-base text-pretty text-muted">Description</div>
      <div data-slot="authors" class="pt-4 mt-auto flex flex-wrap gap-x-3 gap-y-1.5">
        <div data-orientation="horizontal" data-slot="root" class="relative group/user flex items-center gap-2"><span data-slot="root" class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><img src="https://i.pravatar.cc/120?img=1" alt="Author" width="32" height="32" data-slot="image" class="h-full w-full rounded-[inherit] object-cover"></span>
          <div data-slot="wrapper" class="">
            <!--v-if-->
            <p data-slot="name" class="font-medium text-highlighted text-sm">Author</p>
            <!--v-if-->
          </div>
        </div>
      </div>
    </div>
    <!--v-if-->
  </article>
</div>"
`;

exports[`BlogPosts > renders with posts correctly 1`] = `
"<div data-orientation="horizontal" class="flex flex-col gap-8 lg:gap-y-16 sm:grid sm:grid-cols-2 lg:grid-cols-3">
  <article data-orientation="vertical" data-slot="root" class="relative group/blog-post rounded-lg overflow-hidden flex flex-col bg-default ring ring-default">
    <div data-slot="header" class="relative overflow-hidden aspect-[16/9] w-full pointer-events-none"><img alt="Image alt" src="https://picsum.photos/640/360" data-slot="image" class="object-cover object-top w-full h-full"></div>
    <div data-slot="body" class="min-w-0 flex-1 flex flex-col p-4 sm:p-6">
      <!--v-if-->
      <div data-slot="meta" class="flex items-center gap-2 mb-2"><span data-slot="badge" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md ring ring-inset ring-accented text-default bg-elevated"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
        <!--v-if--></span><time datetime="2024-12-13T09:32:32.598Z" data-slot="date" class="text-sm text-toned">Dec 13, 2024</time>
      </div>
      <h2 data-slot="title" class="text-xl text-pretty font-semibold text-highlighted">Title</h2>
      <div data-slot="description" class="mt-1 text-base text-pretty text-muted">Description</div>
      <div data-slot="authors" class="pt-4 mt-auto flex flex-wrap gap-x-3 gap-y-1.5">
        <div data-orientation="horizontal" data-slot="root" class="relative group/user flex items-center gap-2"><span data-slot="root" class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><img src="https://i.pravatar.cc/120?img=1" alt="Author" width="32" height="32" data-slot="image" class="h-full w-full rounded-[inherit] object-cover"></span>
          <div data-slot="wrapper" class="">
            <!--v-if-->
            <p data-slot="name" class="font-medium text-highlighted text-sm">Author</p>
            <!--v-if-->
          </div>
        </div>
      </div>
    </div>
    <!--v-if-->
  </article>
</div>"
`;
